2022-02-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m: Never change the state of the
	selected item when configured as a pull down to match Apple's
	documentation and implementation.

2022-02-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSPopUpButtonCell.m: Add fix to avoid a dangling
	pointer when changing the menu.

2022-01-11 Gregory John Casamento <greg.casamento@gmail.com>

        * Source/NSBundleAdditions.m: Use FOR_IN macro instead
        of for(... in...) for compiler compatibility.

2021-12-28 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSWindowDecorationView.h:
	Move new addon methods for Wayland to correct class
	GSStandardWindowDecorationView.
	* Source/GSWindowDecorationView.m: Keep variables declarations together.

2021-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSPopUpButtonCell.m: Try to prevent segmenation fault
	when deallocating a popup button.

2021-12-26 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m: Rename method on NSMenuPanel for the Wayland
	backend to -_menu to keep it apart from the already existing method
	-menu on NSResponder.
	* Source/NSSplitView.m: Correct decoded integer type.

2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSSplitView.m: Correct issue introduced in the previous change
	for this class.  The code now uses the older, somewhat broken, logic
	for version 0 and the newer logic for later versions.

2021-11-18 Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSBrowser.m: Check [bc isLoaded] in _remapColumnSubviews
        before making the window first responder.

2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/AppKit/NSSplitView.h
	* Source/NSSplitView.m: Incorporate and refactor changes to NSSplitView
        to support Think, Thin, and PaneSplitter NSSplitViewDividerStyle
        settings.

2021-11-15 Gregory John Casamento <greg.casamento@gmail.com>
