@@ -1,5 +1,9 @@
 2022-02-26  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Source/NSPopUpButtonCell.m(setMenu:): Select the first item of
+	the menu instead of the last, as this is the only selection that
+	makes sense for pull downs.
+
 	* Source/NSPopUpButtonCell.m: Never change the state of the
 	selected item when configured as a pull down to match Apple's
 	documentation and implementation.
